tests/spec/compile-pass/070_task_cancel.zn
// category: compile-pass
// profile: hosted
// purpose: cancel explicitly settles a task handle by requesting cooperative cancellation

module tests.pass.taskCancel;

fn cancelQueued(move runtime: Runtime, move work: Work) -> Result<TaskCancelStatus, WorkError> {
    val task = try runtime.spawn({
        return process(move work);
    });

    return Ok(move task.cancel());
}
